# AICupServer

./: .gitignore  AICupApp.cpp  AICupApp.hpp  CMakeLists.txt  Game.cpp  Game.hpp  README.md  main.cpp
core/: BattleLog.cpp  BattleLog.hpp  GameBattlefield.cpp  GameBattlefield.hpp  GameMessage.cpp  GameMessage.hpp  GameParticipant.hpp  GameServer.cpp  GameServer.hpp  GameSession.cpp  GameSession.hpp  Phys.cpp  Phys.hpp
dev/: Communication.cpp  Communication.hpp  CommunicationPack.cpp  CommunicationPack.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp
sdk/: Communication.cpp  Communication.hpp  JsonSerializableAbstract.hpp
